# actix-api

./: .env  Cargo.toml
migrations/2020-07-13-075115_create_employees/: up.sql
src/: main.rs  schema.rs
src/employees/: model.rs  routes.rs
src/user/: model.rs
