[package]
name = "artix-api"
version = "0.1.0"
authors = ["Jarukit Jintanasathirakul <witjarukit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-alpha.3"
actix-rt = "1.1.1"
listenfd = "0.3.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres"]}
